# shader_play

./: .gitignore  CMakeLists.txt  README.md
shaders/: blu_frag.glsl  blu_vert.glsl  cards_frag.glsl  cards_vert.glsl  hg_sdf.glsl  raymarch.glsl  raymarch_mat.glsl  raymarch_uv.glsl  raymarch_vertex.glsl  scene.glsl  sdf_libs.glsl  simple_frag.glsl  simple_frag_blackbody.glsl  simple_vert.glsl  simple_vert_blackbody.glsl  symmetry_frag.glsl  symmetry_vert.glsl
src/: camera.cpp  camera.h  filesys.cpp  filesys.h  imgui_impl_glfw_gl3.cpp  jo_gif.cpp  main.cpp  shaders.cpp  shaders.h  trackball.cpp
